# just

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.bat  test.sh
include/just/: console.hpp  environment.hpp  lines.hpp  test.hpp
libs/: CMakeLists.txt
libs/console/: CMakeLists.txt
libs/console/example/: CMakeLists.txt
libs/console/example/hello_colors/: CMakeLists.txt  README  main.cpp
libs/environment/: CMakeLists.txt
libs/environment/example/: CMakeLists.txt
libs/environment/example/append_path/: CMakeLists.txt  README  main.cpp
libs/environment/test/: CMakeLists.txt  test_environment.cpp
libs/file/: CMakeLists.txt
libs/file/test/: CMakeLists.txt  main.cpp  test_file.cpp
libs/lines/: CMakeLists.txt
libs/lines/example/: CMakeLists.txt
libs/lines/example/multiple_lines/: CMakeLists.txt  README  main.cpp
libs/lines/test/: CMakeLists.txt  test_lines.cpp
libs/process/example/: CMakeLists.txt
libs/process/example/run_ls/: CMakeLists.txt  README  main.cpp
libs/process/example/send_input/: CMakeLists.txt  README  main.cpp
libs/process/test/: CMakeLists.txt  main.cpp  test_input_file.cpp  test_output.cpp  test_output_file.cpp  test_pipe.cpp  test_run.cpp  test_util.cpp  util.cpp  util.hpp
libs/temp/: CMakeLists.txt
libs/temp/test/: CMakeLists.txt  test_dir.cpp
libs/test/example/: CMakeLists.txt
libs/test/example/hello/: CMakeLists.txt  README  main.cpp  non_streamable_type.cpp  non_streamable_type.hpp
libs/test/test/: CMakeLists.txt  main.cpp  test_test.cpp
